--- a/pom.xml
+++ b/pom.xml
@@ -21,11 +21,20 @@
 	<dependencies>
 
 		<dependency>
+			<groupId>com.flickr4java</groupId>
+			<artifactId>flickr4java</artifactId>
+			<version>3.0.8</version>
+		</dependency>
+
+
+		<dependency>
 			<groupId>org.modelmapper</groupId>
 			<artifactId>modelmapper</artifactId>
 			<version>3.1.1</version>
 			<scope>compile</scope>
 		</dependency>
+
+
 
 
 		<dependency>
