--- a/pom.xml
+++ b/pom.xml
@@ -21,18 +21,28 @@
 	<dependencies>
 
 		<dependency>
+			<groupId>org.springdoc</groupId>
+			<artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
+			<version>2.2.0</version>
+		</dependency>
+
+
+		<!-- <dependency>
 			<groupId>io.springfox</groupId>
-			<artifactId>springfox-swagger2</artifactId>
+			<artifactId>springfox-swagger-ui</artifactId>
 			<version>3.0.0 </version>
 		</dependency>
 
 
 		<dependency>
 			<groupId>io.springfox</groupId>
-			<artifactId>springfox-swagger-ui</artifactId>
+			<artifactId>springfox-swagger2</artifactId>
 			<version>3.0.0 </version>
-		</dependency>
+		</dependency> -->
 
+		
+
+	
 
 		<dependency>
 			<groupId>com.flickr4java</groupId>
